--- a/scripts/basic/ws4/ws4.2.html
+++ b/scripts/basic/ws4/ws4.2.html
@@ -8,14 +8,11 @@
     <script type="text/javascript">
         var ws = new WebSocket('ws://127.0.0.1:8000');
 
-        // 握手成功后发送消息
+        // 握手成功后执行 close 操作
         ws.onopen = function () {
             console.log('握手成功');
-            ws.send('测试消息');
+            ws.close();
         };
-
-        // 收到消息后进行输出
-        ws.onmessage = function (msg) { console.log(msg); };
     </script>
 </body>
 </html>
