--- a/scripts/engine_io/index.html
+++ b/scripts/engine_io/index.html
@@ -7,7 +7,10 @@
 <body>
     <script type="text/javascript" src="../../node_modules/engine.io-client/engine.io.js"></script>
     <script type="text/javascript">
-        var socket = eio('ws://127.0.0.1');
+        var socket = eio('ws://127.0.0.1', {
+            transports: ['polling', 'websocket'],
+            // transports: ['polling']
+        });
         socket.on('open', function () {
             socket.on('message', function (data) { console.log(data); });
             socket.on('close', function () { console.log('close') });
