--- a/learn/engine_min/index.html
+++ b/learn/engine_min/index.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <title>engine.io 测试</title>
+    <title>engine.io-min</title>
 </head>
 <body>
     <script type="text/javascript" src="../../node_modules/engine.io-client/engine.io.js"></script>
     <script type="text/javascript">
         var socket = eio('ws://127.0.0.1', {
-            transports: ['websocket'],
-            // transports: ['polling']
+            transports: ['websocket']
         });
         socket.on('open', function () {
             socket.on('message', function (data) { console.log(data); });
-            socket.on('close', function () { console.log('close') });
+            socket.on('close', function () { console.log('close'); });
         });
     </script>
 </body>
