engine.io 最小化抽取完成

--- a/scripts/engine_io/index.html
+++ b/scripts/engine_io/index.html
@@ -12,7 +12,9 @@
             // transports: ['polling']
         });
         socket.on('open', function () {
-            socket.on('message', function (data) { console.log(data); });
+            socket.on('message', function (data) {
+                console.log(data);
+            });
             socket.on('close', function () { console.log('close') });
         });
     </script>
