完成相关实验

--- a/scripts/basic/index.html
+++ b/scripts/basic/index.html
@@ -16,6 +16,9 @@
 
         // 收到消息后进行输出
         ws.onmessage = function (msg) { console.log(msg); };
+
+        console.log(ws.binaryType);
+        console.log(ws.supports);
     </script>
 </body>
 </html>
